Remove unnecessary pages

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -56,14 +56,9 @@
                 <div>
                     <label for="conditions">Conditions:</label>
                     <p id="conditions"></p>
-                    <p>
-                        Paragraph explaining conditions:
-                        or maybe activity reccs
-                        or maybe places to go
-                        have user select thigns they
-                        enjoy doing and give reccsbased on
-                        those
-                    </p>
+                    <div>
+                        <button id="changeClosetBtn">Get Closet</button>
+                    </div>
                 </div>
         </div>
         <div class="closetBody">
