Render filtered closet items according to conditions displayed after weather search

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -61,13 +61,13 @@
                     </div>
                 </div>
         </div>
-        <div class="closetBody">
+        <div class="closetBody" id="closetBody">
             <div class="closetTitle">
                 <h3>Closet</h3>
                 <button id="addClosetBtn">Add to Closet</button>
             </div>
             
-            <div class="closetCols">
+            <div class="closetCols" id="closetCols">
                 <div class="closetCol">
                     <div class="colTitle">Hats</div>
                     <div class="colItems" id="Hat">
@@ -79,7 +79,7 @@
                                     <% } %>
                                 <% }) %>
                             <% } else { %>
-                                <li>No clothing to display</li>
+                                <li>No clothing</li>
                             <% } %>
                         </ul>
                     </div>
@@ -96,7 +96,7 @@
                                     <% } %>
                                 <% }) %>
                             <% } else { %>
-                                <li>No clothing to display </li>
+                                <li>No clothing</li>
                             <% } %>
                         </ul>
                     </div>
@@ -113,7 +113,7 @@
                                     <% } %>
                                 <% }) %>
                             <% } else { %>
-                                <li>No clothing to display </li>
+                                <li>No clothing</li>
                             <% } %>
 
                         </ul>
@@ -131,7 +131,7 @@
                                     <% } %>
                                 <% }) %>
                             <% } else { %>
-                                <li>No clothing to display </li>
+                                <li>No clothing</li>
                             <% } %>
                         </ul>
                     </div>
@@ -148,7 +148,7 @@
                                     <% } %>
                                 <% }) %>
                             <% } else { %>
-                                <li>No clothing to display </li>
+                                <li>No clothing</li>
                             <% } %>
                         </ul>
                     </div>
